--- a/output/Project_1_Group_9_Final.Rmd
+++ b/output/Project_1_Group_9_Final.Rmd
@@ -7,17 +7,18 @@ output:
 ---
 This project tries to answer which state and induatry is the best place to work in America, by analyzing working hours and wage data by states and industries. It mainly can be divided into 3 part.
 
-####General Analysis                
-*What's the working environment in America?* Data analysis and visualization of the average working hours and wage by different states.
+####1.General Analysis                
+*What's the working environment in America?* Data analysis and visualization of the average working hours and wage by different states. In this part, we are going to explore which state provides the best environment for working speaking of wages, working hours and thereby the hour salary.
        
-####Occupations and Industries Analysis     
-*Which job or industry is the best to work for?* To find the best occupation and industry to work onIllustration of Top 5 occupations and industries which have the best working hours and wage ratio.
+####2.Occupations and Industries Analysis     
+*Which job or industry is the best to work for?* To find the best occupation and industry to work on. In this part, we are going to study the attributions of each occupation. Does the job require high education? How long people of the job work? How is the salary? Is the job a popular choice?
           
-####Computer and Mathmatical Occupations Analysis
-*If I stay with what I learnt, where should I go?* Focusing on the computer and Mathmatical Occupations, research on the working hours and wage by different states.
+####3.Computer and Mathmatical Occupations Analysis
+*If I stay with what I learnt, where should I go?* From the former part, it turns outh that CMM(Computer and Mathmatical Occupations) looks like the best occupation for us to do. So in this part we going forward to focusing on the computer and Mathmatical Occupations and research on the working hours and wage by different states, in order to find the best place for us to go.
 
        
 ##Set up the Bench
+
 ```{r lib,message=FALSE}
 library(readr)
 library(dplyr)
@@ -28,22 +29,21 @@ library(fmsb)
 ```
 
 ##Read Data
+
 ```{r toload,message=FALSE}
 setwd("C:/Users/Administrator/Desktop/ADS/Proj 1/Data")
 load(".RData")
-
 #a14=read_csv("ss14pusa.csv")
 #b14=read_csv("ss14pusb.csv")
 #all14=rbind(a14,b14)
 #rm(a14);rm(b14)
 #gc();Sys.sleep(10);gc() #To make sure clean all memory in case of crash
-
 ST_name=read.csv("statenames.csv") #The redundant space in abbr column has been removed in Excel
 occupa=read.csv("OCCP.csv")
 ```
 
-
 ##Clean Dataset
+
 ```{r}
 #selct=select(all14,OCCP,ST,WAGP,AGEP,JWMNP,ESR,SCHL,SEX,WKHP,NAICSP,PWGTP,POWSP,POWPUMA)%>%
 #      na.omit()%>%
@@ -57,8 +57,6 @@ occupa=read.csv("OCCP.csv")
 #             SEX=as.integer(SEX),
 #             OCCP=as.integer(OCCP))%>%
 #       merge(occupa,by="OCCP")
-      
-
 group_ST=group_by(selct,ST)
 sumrz_ST=summarise(group_ST,
                    Meanwage=weighted.mean(WAGP,w=PWGTP),
@@ -66,7 +64,8 @@ sumrz_ST=summarise(group_ST,
                    MeanWKHP=weighted.mean(WKHP,w=PWGTP),
                    MeanJWMNP=weighted.mean(JWMNP,w=PWGTP)
                     )%>%
-          mutate(ST.map=match((ST_name$abbr[-52]),state.fips$abb,nomatch=99))%>%
+          mutate(ST.map=match((ST_name$abbr[-52]),state.fips$abb,nomatch=99))%>% 
+          #use the cleaned statename.csv file or will crash here, also OCCP.csv must be correct
           mutate(abb=state.fips$abb[ST.map])%>%
           arrange(ST.map)
 map.data=merge(state.fips,sumrz_ST,by="abb",all=T)%>%
@@ -74,34 +73,40 @@ map.data=merge(state.fips,sumrz_ST,by="abb",all=T)%>%
 ```
 
 ##Data Analysis and Visualization
+
 ###1.General Analysis: What's the working environment in America?
+
 ####Average Annual Wage by States
-
-
-
-
 
 [Figure 1.Map for Average Wage](map1.html)
 
-This graph shows the distribution of the average wage of different states. As it shows, _The Northeast region_ generally has a higher salaries than the rest part of the contries. _The west coast_ also shows higher wage tendency. _Colorado, Minnesota and Illinois_ also stand out from the middle. Colorado has a reputation on its aerospace and aviation industry. Apart from agriculture, Minnesota has a strong root of bioscience, is one of the biggest cribs of medical profesionals. Chicago as the third biggest city in USA definitely contributes on the deeper color of Illinois in this graph.
+This graph shows the distribution of the average wage of different states. The darker the color is, the higher the average wage is. Generally speaking, _coast region_ has a higher wage. As it shows, _The Northeast region_  has a higher salaries than the rest part of the contries. _The west coast_ also shows higher wage tendency. _Colorado, Minnesota and Illinois_ also stand out from the middle. Colorado has a reputation on its aerospace and aviation industry. Apart from agriculture, Minnesota has a strong root of bioscience, is one of the biggest cribs of medical profesionals. Chicago as the third biggest city in USA definitely contributes on the deeper color of Illinois in this graph. 
 
+In this graph, it seems that better to work in coast area. But wait! What about the working hour? If you have to work all days long to earn a relatively high wage, it will be a silly decision. So we need to go further and see the working hour.
 
 ####Average Working Hours per week by States
 
 [Figure 2.Map for Average Working Hour](map2.html)
 
-This Graph shows the average working hours by different state. The states which shows longer averagely working hours are most likely depends on agriculture industry. Surprisingly, New York people is not the most hard working people among the country.
+This Graph shows the average working hours by different state. The darker the color is, the longer one have to work in this state. The states which shows longer averagely working hours are most likely depends on agriculture industry. Surprisingly, New York people is not the most hard working people among the country.
+
+What!? The lower wage areas have longer working hour? That is crazy. Too unfair. But for us, just let it be and see what we can utilize from this funny fact.
+
+The idea is simple, just look at hour salary, that is, salary earned per hour.(Indeed it doesn't have to be "per hour", it could be per minute or per 37 seconds. We just need to compare them in the same scale and done.)
 
 
 ####Work Life balance Ratio by States
 
 [Figure 3.Map for Hour Salary](map3.html)
 
+In the graph, the darker the color is, the higher hour salary the state earns.
 
-Laziness is human nature. Don't you want a job which pays tons of money and only requireds you show up at work for an hour on Friday before you head out? We calculated work life balance ratio by working hours and wage. Apparently, people who works "in the office" and have higher education generally have a sweeter life. But the problem is the data shows smaller diversities of working hours among the states, so this graph's data is mainly dominant by the wage differences.
+Laziness is human nature. Don't you want a job which pays tons of money and only requireds you show up at work for an hour on Friday before you head out? We calculated work life balance ratio by working hours and wage. Apparently, people who works "in the office" and have higher education generally have a sweeter life. But the problem is the data shows smaller diversities of working hours among the states, so this graph's data is mainly dominant by the wage differences. 
 
+From this graph, it shows we shall definitely choose the northeast coast and second west coast. But is it too simple? Yes! Alghough the analysis above does provide some key insight in the general working environment and answer the question that is it a busy poor state, which one should concern for his generally welfare, we forget the occupation per se. There are some job we cannot do due to our present education background. So let take a detour and choose a nice job which we can apply now.
 
 ###2.Occupations and Industries Analysis: Which job or industry is the best to work for? 
+
 ####Regroup Data by Occupations and Industries
 ```{r}
 group_OCCPABB=group_by(selct,OCCABB)
@@ -129,8 +134,8 @@ sumrz_OCCP=summarise(group_OCCP,
 
 ```
 
-
 ####Occupations and Industries Working Conditions Comparison
+
 ```{r}
 n <- nrow(sumrz_OCCP)
 ramp <- colorNumeric(
@@ -147,11 +152,13 @@ figure() %>%
   x_axis("Average Wage",number_formatter = "numeral", format = "0,000")%>%
   y_axis("Average Working Hour",number_formatter = "numeral", format = "0,000")
 ```
-Physicians and surgens won the best paid occupation without a doubt, and their wage is way higher than other occupations. All other managing and legal related occupations appear a lead speaking of wage.
 
 Figure 4. Occupation Attribution (By Occupation)
 
-Among all the occupations, legal occupations won the best paid occupation. Business and Managing occupations have the best work life balance. Finance, engineering and computer mathmatical occupations are pretty close to managing roles speaking of working hours and wages. In general, the graph illustrates the old saying, no pain no gain.
+The color stands for education level, darker means higher level. Size indicates the amount of people doing this job.
+
+Physicians and surgens won the best paid occupation without a doubt, and their wage is way higher than other occupations. All other managing and legal related occupations appear a lead speaking of wage. But we cannot do that since we learn only data science. Maybe it will be more helpful to categorize the jobs and look at them in a broader view.
+
 ```{r}
 
 figure() %>%
@@ -163,16 +170,30 @@ figure() %>%
   
 
 ```
+
 Figure 5. Occupation Attribution (By Category)
+
+The color stands for education level, darker means higher level. Size indicates the amount of people doing this job.
+
+Among all the occupations, legal occupations won the best paid occupation. Business and Managing occupations have the best work life balance. Finance, engineering and computer mathmatical occupations are pretty close to managing roles speaking of working hours and wages. In general, the graph illustrates the old saying, no pain no gain.
+
+So now where we stand? From the graph, the rightest dot which we can choose turns out to be CMM(Computer and Mathmatical Occupations) after a while of examination. So now let's focus on CMM and repeat the job we have done in PART 1.
 
 ###3.Where can WE(statistician) choose?
 
-
 [Figure 6. Map for Average Wage (Occupation Category: CMM-Computer and Mathematical Occupations)](map4.html)
-According to the map, Northeast including New York City, California and Washiton's computer and mathematical occupaitions are the best place for data scientists, programmer or statistians to work where provides the best work life balance. Since most of tech companies who requires more computer and mathmatical profesionals are located in northeat cities and the west coasts.
+
+According to the map, Northeast including New York City, California and Washiton's computer and mathematical occupaitions are the best place for data scientists, programmer or statistians to work where provides the best work life balance. Since most of tech companies who requires more computer and mathmatical profesionals are located in northeat cities and the west coasts. Contrast with part 1, WA pops out as the best salary state for CMM.
 
 [Figure 7. Map for Average Working Hour (Occupation Category: CMM-Computer and Mathematical Occupations)](map5.html)
+
+Nice enough, WA does not lie in the most tiring class. Let's also see the hour salary.
+
 
 [Figure 8.Map for Hour Salary (Occupation Category: CMM-Computer and Mathematical Occupations)](map6.html)
 
 According to the map, Northeast including New York City, California and Washiton's computer and mathematical occupaitions are the best place for data scientists, programmer or statistians to work where provides the best work life balance. Since most of tech companies who requires more computer and mathmatical profesionals are located in northeat cities and the west coasts.
+
+So, finally we can learn something: Definitely go to WA if you can. If not, NJ or CA also seem pretty good. But now after reading this, obsolutely don't go to NV, AR and WY.
+
+The end.
